# bank-automat-system

./: .gitignore  README.md
backend/: app.js  db.js  package-lock.json  package.json
backend/public/: index.html
backend/public/stylesheets/: style.css
backend/routes/: accounts.js  auth.js  health.js  images.js
backend/routes/crud/: accounts.js  card_accounts.js  cards.js  customers.js  transactions.js
bank-automat/: ApiClient.cpp  ApiClient.h  CMakeLists.txt  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  StartWindow.cpp  StartWindow.h  StartWindow.ui  main.cpp
database/: 01_schema.sql  02_seed.sql
docs/: project-plan.md  technical-specification.md
docs/weekly-logs/: template.md  week-01.md
infra/nginx/: nginx.conf
infra/nginx/html/: index.html
postman/: bank-automat-system.postman_collection
